--- a/src/Sass/pages/_about.scss
+++ b/src/Sass/pages/_about.scss
@@ -1,6 +1,7 @@
 .about {
   background-color: $color_alice_blue;
   height: 100vh;
+  padding-top: 10vh;
   width: 100vw;
 
   &__heading {
